<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileListActivity"
    android:padding="8dp">

    <TextView
        android:id="@+id/name1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name_1"
        android:layout_gravity="left"
        android:textColor="@color/colorRed"
        android:clickable="true"
        android:focusable="true"
        android:onClick="clickedOnPera"
        />

    <TextView
        android:id="@+id/birthday1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_birthday_1"
        android:layout_gravity="right"
        android:textColor="@color/colorBlue"
        />

    <TextView
        android:id="@+id/name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name_2"
        android:layout_gravity="left"
        android:textColor="@color/colorRed"
        android:clickable="true"
        android:focusable="true"
        android:onClick="clickedOnSava"
        />

    <TextView
        android:id="@+id/birthday2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_birthday_2"
        android:layout_gravity="right"
        android:textColor="@color/colorBlue"
        />

    <TextView
        android:id="@+id/name3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name_3"
        android:layout_gravity="left"
        android:textColor="@color/colorRed"
        android:clickable="true"
        android:focusable="true"
        android:onClick="clickedOnJovan"
        />

    <TextView
        android:id="@+id/birthday3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_birthday_3"
        android:layout_gravity="right"
        android:textColor="@color/colorBlue"
        />

</LinearLayout>